--- a/bulkimport/transformation_scripts/import.ipynb
+++ b/bulkimport/transformation_scripts/import.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Maintenante\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -102,6 +109,7 @@
     "\n",
     "\n",
     "import pandas as pd\n",
+    "\n",
     "file_name = \"../INPUT_data/authors.csv\"\n",
     "file_name_output = \"../INPUT_data/authors_distinct.csv\"\n",
     "\n",
@@ -404,7 +412,7 @@
     "    ET.register_namespace(\"knoraXmlImport\", NS_KNORAIMPORT)\n",
     "\n",
     "    ## define elements with ns\n",
-    "    AuthorNS = ET.QName(NS_ROUD, \"Author\")\n",
+    "    AuthorNS = ET.QName(NS_ROUD, \"Author\")  \n",
     "    labelNS = ET.QName(NS_KNORAIMPORT, \"label\")\n",
     "    AuthorHasFamilyNameNS = ET.QName(NS_ROUD, \"authorHasFamilyName\")\n",
     "    AuthorHasGivenNameNS = ET.QName(NS_ROUD, \"authorHasGivenName\")\n",
@@ -1553,7 +1561,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "###\n",
